--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "admin-lte": "^3.0.5",
+        "laravel-vue-pagination": "^2.3.1",
+        "lottie-vuejs": "^0.4.0",
         "moment": "^2.29.1",
         "sweetalert2": "^10.10.1",
         "vform": "^1.0.1",
